--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,87 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
 
     tools:context="com.taeksukim.android.activitycontrol.MainActivity"
-    android:weightSum="1">
+    >
 
     <Button
         android:text="Common"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/mCommon" />
+        android:id="@+id/btnCommon"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Trans One"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnTrans1"
+        android:layout_marginTop="66dp"
+        android:layout_below="@+id/btnCommon"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Trans Two"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/btnTrans1"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/btnTrans2" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:text="Name"
         android:ems="10"
-        android:id="@+id/editText" />
-
-    <Button
-        android:text="Trans"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/mTrans1" />
+        android:id="@+id/editText"
+        android:layout_above="@+id/btnTrans2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="10dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center_vertical|center" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:text="value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:id="@+id/tv1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button"
-        android:textSize="14sp" />
-
-    <Button
-        android:text="trans2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/mTrans2" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_below="@+id/btnTrans1"
+        android:layout_alignRight="@+id/btnCommon"
+        android:layout_alignEnd="@+id/btnCommon"
+        android:layout_marginRight="15dp"
+        android:layout_marginEnd="15dp" />
 
     <TextView
-        android:text="TextView"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:text="value"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/tv2"
-        android:textAppearance="@style/TextAppearance.AppCompat.Button" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
+        android:layout_alignBaseline="@+id/tv1"
+        android:layout_alignBottom="@+id/tv1"
+        android:layout_alignLeft="@+id/btnTrans2"
+        android:layout_alignStart="@+id/btnTrans2" />
 
     <Button
-        android:text="dial"
-        android:layout_width="match_parent"
+        android:text="DIAL"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tv1"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="39dp"
         android:id="@+id/btnDial" />
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
+        android:layout_alignBottom="@+id/btnDial"
+        android:layout_toRightOf="@+id/btnDial"
         android:id="@+id/etDial"
-        android:hint="number" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:hint="input phone numbers" />
 
     <Button
-        android:text="browse"
-        android:layout_width="match_parent"
+        android:text="BROWSE"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/btnDial"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:id="@+id/btnBrowse" />
 
+    <Button
+        android:text="SMS"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnBrowse"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/btnSMS" />
+
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:layout_alignBottom="@+id/btnSMS"
+        android:layout_toRightOf="@+id/btnSMS"
+        android:id="@+id/etSMS"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
-        android:id="@+id/etBrower"
-        android:hint="URL" />
+        android:id="@+id/etBrowse"
+        android:layout_above="@+id/btnSMS"
+        android:layout_toRightOf="@+id/btnBrowse"
+        android:hint="URL"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-    <Button
-        android:text="sms"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnSMS" />
-
-</LinearLayout>
+</RelativeLayout>
